see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

06-Oct-2009 Ron Severdia
# BlueStork CSS cleanup
# Layout fixes for com_contact, com_menus, com_users, com_weblinks
# Grid CSS fixed.

06-Oct-2009 Andrew Eddie
^ Loop optimisation in JDocumentHTML::countModules

05-Oct-2009 Mark Dexter
# Fixed problems when moving & re-ordering Categories in Category Manager

03-Oct-2009 Ercan Ozkaya
 + Added content form view for frontend
 ^ Changed error handling in JHtml
 - Removed reduntant allowAllClose option from calls to JPaneSliders
 # Fixed a broken index.html file
 # Fixed an incomplete CSRF check
 # Fixed access check in frontpage
 # Fixed a fatal error in com_content

02-Oct-2009 Ron Severdia
# Clean up edit category layout
# CSS fixes for high-contrast/text sizer parameters

03-Oct-2009 Andrew Eddie
# Fixed bug preventing frontend login.

02-Oct-2009 Louis Landry
! - Merged acl2 branch into trunk with new and improved ACL system.

02-Oct2009 Andrew Eddie
# Fix bugs in rules fields (wrong extension given).
^ Split layout of admin mod_menu into enabled and disabled layouts.
^ Reverse direction of user groups to allow top-down inheritance.

01-Oct-2009 Louis Landry
- Removed JFormFieldAccessSections
- Removed JAccessHelper
^ Drastically simplified JAccess and made all methods static.
# Fix problem where admin session timeout produces an exception because of the request url.

01-Oct-2009 Andrew Eddie
- Removed JAccessLevel and JSimpleRule
^ Rename jos_access_assets to jos_assets
+ Added permissions to global configuration.
+ Added permissions to component configuration.
^ Split com_banners helper into site and admin; renamed to BannersHelper.
